Fixed FAQ Section
Font size was too large and the 5th question was referenced to the 4th question.

--- a/styles.css
+++ b/styles.css
@@ -672,7 +672,7 @@
         
     .faq__content label {
         padding: 10px;
-        font-size: 20rem;
+        font-size: 1.5rem;
     }
 
 } 
